# nlp-and-sp-cheatsheet

./: .pre-commit-config.yaml  .readthedocs.yaml  Makefile  README.md  pyproject.toml
_build/doctrees/: acoustic_features.doctree  acoustic_phonetics.doctree  automatic_speech_recognition.doctree  calculus.doctree  contribute.doctree  datasets.doctree  dialogue_systems.doctree  environment.pickle  fast_fourier_transform.doctree  gmm.doctree  gmm_hmm.doctree  hmm.doctree  index.doctree  information_retrieval.doctree  libraries.doctree  linear_algebra.doctree  machine_translation.doctree  math_notation.doctree  miscellaneous.doctree  nn_architectures_basic.doctree  nn_architectures_speech.doctree  nn_architecures_nlp.doctree  nn_building_blocks.doctree  optimization.doctree  overview_nlp.doctree  overview_sp.doctree  papers.doctree  probability.doctree  question_answering.doctree  reinforcement_learning.doctree  sentiment_analysis.doctree  signal_processing.doctree  speech_synthesis.doctree  statistics.doctree  svd.doctree  text_mining.doctree  text_representations.doctree  text_summarization.doctree  tokenization.doctree  voice_conversion.doctree
_build/html/: automatic_speech_recognition.html  fast_fourier_transform.html  genindex.html  hmm.html  information_retrieval.html  linear_algebra.html  math_notation.html  nn_architectures_basic.html  nn_architectures_speech.html  nn_architecures_nlp.html  objects.inv  optimization.html  papers.html  probability.html  question_answering.html  search.html  (+5 more)
docs/: conf.py  fast_fourier_transform.rst  index.rst  libraries.rst
(+130 files in other folders)
