[tool.poetry]
name = "nlp-and-sp-cheatsheet"
version = "0.1.0"
description = "Source for https://nlp-and-sp-cheatsheet.readthedocs.io"
authors = ["yelircaasi <isaac.r.riley@gmail.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
sphinx = "^7.2.6"
shibuya = "^2023.10.26"
recommonmark = "^0.7.1"
pre-commit = "^3.5.0"
